# KBE

./: LICENSE  abcparser.py  kbetparser.py  keyboard.py  keyboardparser.py  pyproject.toml  requirements.txt  songparser.py
demos/6 - ABC to KBE demo/: orange_in_bloom2.abc
demos/demo1/: 1 - Live Performance Demo.txt
demos/demo1 old/: demo1_kb.txt  part1.txt  part3.txt
demos/demo2/: 2 - Layered Track Demo.txt  demo2_kb.txt  part1.txt  part2.txt
demos/demo3/: 3 - Recorded Performance Demo.txt
demos/demo4/: 4 - Theater Performance Demo.txt
demos/demo5/: 5 - Layout Experimentation Demo.txt
demos/demo6/: 6 - ABC to KBE Demo.txt  orange_in_bloom.abc
demos/demo7/: 7 - KBE to ABC Demo.txt
keybinds/: chords.txt  keybinds.txt  keybinds2.txt  shiftkeys.json
songs/: record.txt  song-bpm-test.txt  song.txt  test.txt
songs/demo1/: part2.txt
songs/demo2/: part3.txt
songs/tchaikovsky_demo/: part4.txt
soundfonts/: percussion2.sf2
